--- a/views/authors/index.ejs
+++ b/views/authors/index.ejs
@@ -5,6 +5,8 @@
     <button type="submit">Search</button>
 </form>
 <br>
+<div>
 <% authors.forEach(author => { %>
     <div><%= author.name %></div>
      <% }) %>
+</div>
