File Upload Database

--- a/views/books/index.ejs
+++ b/views/books/index.ejs
@@ -17,6 +17,6 @@
 <br>
     <div>
         <% books.forEach(book => { %>
-        <img height="150" width="100" src="<%= book.coverImagepath%>">
+        <img height="200" width="150" src="<%= book.coverImagepath%>"%>
      <% }) %>
     </div>
